--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -25,7 +24,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-100 dark:bg-slate-900">
+  <body class="bg-slate-100 dark:bg-[#0F172A]">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
