--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Talvri</title>
+    <link rel="stylesheet" href="/App.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      // Set the theme on initial load
-      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-        document.documentElement.classList.add('dark')
-      } else {
-        document.documentElement.classList.remove('dark')
-      }
+      // Set theme on initial load to prevent flashing
+      (function() {
+        try {
+          var theme = localStorage.getItem('theme');
+          if (theme === 'dark' || (!theme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            document.documentElement.classList.add('dark');
+          } else {
+            document.documentElement.classList.remove('dark');
+          }
+        } catch (_) {}
+      })();
     </script>
   <script type="importmap">
 {
@@ -24,7 +30,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-100 dark:bg-[#0F172A]">
+  <body class="bg-slate-50 dark:bg-slate-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
